# system-f-omega

./: LICENSE  README.md  lambda-calculus.cabal
app/: Main.hs
examples/: classic.st
lib/: AST.hs  Check.hs  Eval.hs  Parser.hs
lib/Common/: Parser.hs
src/: README.md  prelude.st
src/app/: Main.hs
src/examples/: fail.st  inductive-types.st  product-types.st  records.st  sum-types.st
src/lib/: Env.hs  Map.hs  REPL.hs
src/lib/Common/: State.hs  Types.hs
test/: Main.hs
