cabal-version:      3.0
name:               lambda-calculus
version:            0.1.0.0
synopsis:           System Fω Interpreter
license:            MIT
license-file:       LICENSE
author:             Matthew Dunn
maintainer:         matthew.dunn.bkk@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library ST
    exposed-modules: REPL, Env, AST, Check, Eval
    hs-source-dirs: lib
    other-modules: Common.Parser, Common.State, Common.Types, Map, Parser
    build-depends: base ^>=4.17.0.0, parsec >=3.1.11, mtl >=2.2.1
    default-language: Haskell2010

executable lambda-calculus
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.0.0, parsec >=3.1.11, mtl >=2.2.1, ST
    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite test-lambda-calculus
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends: QuickCheck >=2.14.3, base ^>=4.17.0.0, HUnit >=1.6.2.0, ST
    hs-source-dirs: test
    default-language: Haskell2010
